force-app/main/default/objects/EMD_Details__c/EMD_Details__c.object-meta.xml
<CustomObject>
    <description>CRM-9209: Used to store Electronic Miscellaneous Document details for QAC Seats And Baggage Service Requests.</description>
    <label>EMD Details</label>
    <nameField>
        <displayFormat>EMD-{000000}</displayFormat>
        <label>EMD Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMD Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>