force-app/main/default/objects/EMD_Details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QAC Service Request Case value</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>EMD Details</relationshipLabel>
    <relationshipName>EMD_Details</relationshipName>
    <type>Lookup</type>
</CustomField>