force-app/main/default/objects/EMD_Details__c/fields/EMD_Number__c.field-meta.xml
<CustomField>
    <fullName>EMD_Number__c</fullName>
    <description>Used to hold the EMD Number value</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EMD Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>