force-app/main/default/objects/EMD_Details__c/fields/EMD_Type__c.field-meta.xml
<CustomField>
    <fullName>EMD_Type__c</fullName>
    <description>Used to hold the type of Service Request</description>
    <label>EMD Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seats - extra leg room</fullName>
            </value>
            <value>
                <fullName>Seats - exit row</fullName>
            </value>
            <value>
                <fullName>Seats - select a seat</fullName>
            </value>
            <value>
                <fullName>Baggage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>